# ClothSimulation

./: CMakeLists.txt
R/shaders/: pixelate.frag
core_source_files/: R.cpp
exp_header_files/Render/: WindowManager.h
exp_source_files/Render/: WindowManager.cpp
proj_source_files/: main.cpp
